  are connected to a Methanol system and want to store meta-data about a URL.
* new Javascript  function set_attribute() for setting attributes for the
  current URL
* API support for custom status, error/warning and target reporter functions
* lmetha_global_setopt() is no longer available, replaced with lmetha_setopt()
  options
* libmetha no longer depends on libev, but instead uses pipes and epoll() for
  inter-thread communication and waiting for events on sockets.
* mb-clientd is  a version of the methabot client, running in the background and
  communicating with a Methanol web crawling system
* mn-slaved: a slave server  responsible  for  managing and collecting data from
  client daemons
* mn-masterd is the master server, responsible  for statistics and system-global
  signaling
* phpMadMind is a web interface for administrating a Methanol system
* --external option set to false can no longer be circumvented using a HTTP-
  redirect

1.6.0
=====
Here comes another feature-packed  release  of  Methabot.  This release contains
such fine new features as  Javascript-MySQL support, parser chaining support and
better URL filtering with support for robots.txt.

Changes and new features:
* New configuration and  script  for  automatically  validating HTML/XHTML pages
  through W3C's validator
* The builtin HTML parser is now much more fault tolerant.
* Modules can now register configuration file scopes and thus be configured from
  configuration files.
* Modules can register  objects  and  functions  that  will  be available to the
  workers (javascript)
* The load_module directive  is  now  available  so  the  user can manually load
  modules.
* Javascript-MySQL binding support through the new lmm_mysql loadable module.
* New parser system with support for  parser chaining. Parsers are now protocol-
  independent.
* Support for handlers, the 'handler' filetype option, and the 'default_handler'
  crawler option.
* New configuration for searching Wikipedia.